samples/_failures_safe/1761282778_4e1525_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db680530.c: In function ‘main’:
./samples/SAFE/__tmp_db680530.c:192:5: error: expected declaration or statement at end of input
  192 |     printf("Tokens found: %d\n", token_count);
      |     ^~~~~~
